# UTEC-Tsunami-SPH-CUDA

./: .gitattributes  .gitignore  CONTEXTO_FASE3.md  README.md
fase1_sph_tsunami/: CMakeLists.txt  INFORME_TECNICO.md  README.md  visualize_cache.py
fase1_sph_tsunami/include/: spatial_hash.cuh  sph_types.h
fase1_sph_tsunami/scripts/: compile_login.sh  deploy_khipu_cine.sh  khipu_job_cine_sim.slurm  khipu_job_cine_splash_range.slurm  khipu_job_render_v4.slurm
fase1_sph_tsunami/src/: kernels.cu  main.cu
fase2_splashsurf/: 02_splashsurf.py  04_render_sequence.py  06_setup_render_scene_v4_cine.py  07_extract_foam.py  EJECUCION.md  LOGICA.md  README.md  config.py
fase3/: README.md
fase4_sdf/: 01_clean_mesh.py  02_generate_sdf.py  README.md  README_V2_SDF.md  config_v2.py
fase4_sdf/sdf/: utec_sdf_meta.json
